--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,7 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if cart.size != 0 %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -15,6 +15,7 @@
         </tr>
       </thead>
       <tbody>
+
         <% enhanced_cart.each do |item| %>
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
         <% end %>
@@ -48,5 +49,10 @@
       <% end %>
     </div>
   </div>
+
+  <% else %>
+    <h3> Your cart is Empty Cick on the button below to go back and continue shopping </h3>
+    <%= link_to 'Back to shopping!', root_url, class: 'btn tbn-info' %>
+    <% end %>
 
 </section>
