--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,28 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      aside.soldout {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: rgb(219, 13, 13);
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.9em;
+        color: white;
+        opacity: 70%;
+      }
+
+      aside.remaining {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        border-top-right-radius: 4px;
+        border-bottom-left-radius: 20px;
+      }
+
       &:hover {
 
         border-color: #999;
