--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -51,8 +51,10 @@
   </div>
 
   <% else %>
-    <h3> Your cart is Empty Cick on the button below to go back and continue shopping </h3>
-    <%= link_to 'Back to shopping!', root_url, class: 'btn tbn-info' %>
+    <div class="alert alert-info">
+  <strong>Empty Cart!</strong> Your cart is empty right now. Please click on the button below and go back to home page
+</div>
+    <%= link_to 'Back to shopping!', root_url, class: "btn btn-info btn-block btn-radius" %>
     <% end %>
 
 </section>
