--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,4 +20,15 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+
+  <% if product.quantity == 0 %>
+   <aside class="soldout">
+   <p style="display: contents;"> SOLD OUT! </p>
+   </aside>
+
+<% else %> 
+<aside class="remaining">
+</aside>
+<% end %>
+
 </article>
