--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,8 +5,47 @@
   </header>
 
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h4>Thank you <span style="color: red;"><b><%= @order.email %></b></span> for your order!</h4>
   </div>
+
+
+
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+
+        <% total_amount = 0 %>
+        <% line_items = LineItem.where(order_id: @order.id) %>
+        <% line_items.each do |item| %>
+          <% total_amount += item.total_price %>
+          <%= render 'item', item: item  %>
+        <% end %>
+
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= humanized_money_with_symbol total_amount %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+
+  
+
+
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
