--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<header class = "page-header">
+<h1> Dashboard </h1>
+</header>
+
+
+<div class="alert alert-success">
+  <h4>Product Count: <%= @product_count %></h4>
+</div>
+
+<div class="alert alert-danger">
+  <h4>Category Count: <%= @category_count %></h4>
+</div>
